<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/add_series_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/add_season_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@string/add_season"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/title_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:ellipsize="end"
            android:maxLines="5"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_season_text"
            tools:text="The Handmaid's Tale" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/season_number_select_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:translationX="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text">

        <TextView
                android:id="@+id/season_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/season" />

        <com.sglasman.tvqueue.views.NumberSelectView
                android:id="@+id/season_number_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
            android:id="@+id/just_future_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:text="@string/just_add_future_seasons"
            android:textColor="@color/green"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/season_number_select_ll" />

    <FrameLayout
            android:id="@+id/just_future_clickable_area"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@id/just_future_text"
            app:layout_constraintEnd_toEndOf="@id/just_future_text"
            app:layout_constraintStart_toStartOf="@id/just_future_text"
            app:layout_constraintTop_toTopOf="@id/just_future_text" />


</androidx.constraintlayout.widget.ConstraintLayout>