<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/search_view_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="RtlSymmetry">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
            android:id="@+id/search_card"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            app:cardBackgroundColor="@color/lightGrey"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/search_card"
            app:layout_constraintEnd_toStartOf="@id/search_icon"
            app:layout_constraintStart_toStartOf="@id/search_card"
            app:layout_constraintTop_toTopOf="@id/search_card" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

    <TextView
            android:id="@+id/no_results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_network_error"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>